Changes made from the "0.7.0" release to the "0.8.0" release:
-------------------------------------------------------------

* Bertrand Coconnier:

- Simplified a bit the internal management of the resolution
- Added padding for GLC_TEXTURE rendering mode so that the antialiasing is not
  jeopardized when a glyph touches the border of the texture.
- Fixed bug #1935557 (Fonts are not rendered correctly when the resolution is
  changed using glcResolution).
- The configure script now exports a summary of the parameters values
- Replaced glPush/PopClientAttrib() for vertex arrays and VBOs by explicit
  save/restore management in order to improve speed.
- GLEW thread-safe support for multiple rendering contexts is now an option of
  the build process. It is disabled by default in order to use the standard
  system library (and eventually to improve speed).
- Fixed the bugs #1852883 and #1890660 (VBOs had an erratic behaviour on some
  Mac OS X platforms and Intel X3100 gfx cards under Linux).
- Removed the workaround for bug #1852883

Changes made from the "0.6.5" release to the "0.7.0" release:
-------------------------------------------------------------

* Bertrand Coconnier:

- Added a workaround for bug #1852883 : VBOs are disabled on Mac OSX platforms
- Fixed a bug in the measurement routines which caused the advance vector of
  strings to be wrongly computed.
- Simplified a bit the GL state management (enabling of GL_TEXTURE_2D should now
  be done by the user when the rendering style is GLC_TEXTURE)
- Updated GLEW source code to release 1.5.0
- glcGetFontMap() and glcGetMasterMap() now return GLC_NONE if the font/master
  does not map 'inCode'.
- Updated test7 in order not to report an error when testing fonts which defines
  a space character with no width.
- glcGenFontID() now creates an empty font in order to reserve the ID for a
  future use. The new ID can be freed by deleting it with glcDeleteFont().